# goit-pyweb-09

./: pyproject.toml
quotes_spider/: authors.json
quotes_spider/quotes_spider/: config.ini  connect.py  items.py  models.py  search.py  seeds.py  settings.py
quotes_spider/quotes_spider/spiders/: quotes.py
