[tool.poetry]
name = "goit-pyweb-09"
version = "0.1.0"
description = ""
authors = ["iamleeon <165953114+iamleeon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
mongoengine = "^0.28.2"
configparser = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
